--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,57 @@
   }
 }
 
+/* the prime number multiplication table CSS starts HERE */
+.prime-number-input{
+  font-size: 25px;
+  color: black;
+  background-color: grey;
+  border-radius: 5px;
+  border: none;
+  height: 35px;
+  text-align: center;
+}
+
+body{
+  background-color: whitesmoke;
+}
+
+.main-header{
+  color: goldenrod;
+  font-family: Verdana;
+  font-weight: 400;
+}
+
+.prime-number-input:focus{
+  outline: none;
+  border: 3px solid goldenrod;
+}
+
+p{
+  font-family: Verdana;
+}
+
+th, td{
+  border: 1px solid;
+  border-left: none;
+  border-top: none;
+}
+
+t{
+  background-color: #04AA6d;
+}
+
+table{
+  width: 100%;
+  border-collapse: collapse;
+  font-size: 40px;
+  margin: 20px;
+}
+/* the prime number multiplication table CSS ends HERE */
+
+
+
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
